--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
-    "bootstrap": "^4.5.3"
+    "bootstrap": "^4.5.3",
+    "sweetalert2": "^10.10.0"
   }
 }
